--- a/package.json
+++ b/package.json
@@ -8,12 +8,17 @@
     "preview": "astro preview",
     "astro": "astro",
     "lint": "biome lint .",
-    "lint:fix": "biome lint . --fix"
+    "lint:fix": "biome lint . --fix",
+    "format": "prettier . --list-different",
+    "format:write": "prettier . --write"
   },
   "dependencies": {
     "astro": "^5.12.9"
   },
   "devDependencies": {
-    "@biomejs/biome": "2.1.4"
+    "@biomejs/biome": "2.1.4",
+    "prettier": "^3.6.2",
+    "prettier-plugin-astro": "^0.14.1",
+    "prettier-plugin-tailwindcss": "^0.6.14"
   }
 }
