--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
     "lint": "biome lint .",
     "lint:fix": "biome lint . --fix",
     "format": "prettier . --list-different",
-    "format:write": "prettier . --write"
+    "format:write": "prettier . --write",
+    "prepare": "lefthook install"
   },
   "dependencies": {
     "astro": "^5.12.9"
   },
   "devDependencies": {
     "@biomejs/biome": "2.1.4",
+    "lefthook": "^1.12.2",
     "prettier": "^3.6.2",
     "prettier-plugin-astro": "^0.14.1",
     "prettier-plugin-tailwindcss": "^0.6.14"
