--- a/package.json
+++ b/package.json
@@ -6,9 +6,21 @@
     "dev": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "lint": "biome lint .",
+    "lint:fix": "biome lint . --fix",
+    "format": "prettier . --list-different",
+    "format:write": "prettier . --write",
+    "prepare": "lefthook install"
   },
   "dependencies": {
     "astro": "^5.12.9"
+  },
+  "devDependencies": {
+    "@biomejs/biome": "2.1.4",
+    "lefthook": "^1.12.2",
+    "prettier": "^3.6.2",
+    "prettier-plugin-astro": "^0.14.1",
+    "prettier-plugin-tailwindcss": "^0.6.14"
   }
 }
