--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
   },
   "devDependencies": {
     "@biomejs/biome": "2.1.4",
+    "@tailwindcss/vite": "^4.1.11",
     "lefthook": "^1.12.2",
     "prettier": "^3.6.2",
     "prettier-plugin-astro": "^0.14.1",
-    "prettier-plugin-tailwindcss": "^0.6.14"
+    "prettier-plugin-tailwindcss": "^0.6.14",
+    "tailwindcss": "^4.1.11"
   }
 }
