--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "prepare": "lefthook install"
   },
   "dependencies": {
-    "astro": "^5.12.9"
+    "astro": "^5.12.9",
+    "astro-icon": "^1.1.5"
   },
   "devDependencies": {
     "@biomejs/biome": "2.1.4",
