--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   },
   "dependencies": {
     "astro": "^5.12.9",
-    "astro-icon": "^1.1.5"
+    "astro-icon": "^1.1.5",
+    "copy-text-to-clipboard": "^3.2.0"
   },
   "devDependencies": {
     "@biomejs/biome": "2.1.4",
