--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "prepare": "lefthook install"
   },
   "dependencies": {
+    "@astrojs/sitemap": "^3.5.0",
     "astro": "^5.12.9",
     "astro-icon": "^1.1.5",
     "copy-text-to-clipboard": "^3.2.0"
