add site description & micro site interactions

--- a/src/site-config.json
+++ b/src/site-config.json
@@ -1,6 +1,6 @@
 {
   "title": "Aldo Robles - Sofware Developer",
-  "description": "This is my website",
+  "description": "Aldo Robles — Software Developer specialized in web and mobile solutions.",
   "author": {
     "twitter": "@roblesdotdev"
   },
