--- a/src/site-config.json
+++ b/src/site-config.json
@@ -36,7 +36,7 @@
     },
     {
       "label": "instagram",
-      "href": "https://instagram.com/roblesdotdev",
+      "href": "https://www.instagram.com/roblesdotdev?igsh=cG5wa204MHdpOWY2",
       "iconName": "instagram"
     }
   ],
