--- a/src/site-config.json
+++ b/src/site-config.json
@@ -36,7 +36,7 @@
     },
     {
       "label": "instagram",
-      "href": "https://www.instagram.com/_roblesok",
+      "href": "https://www.instagram.com/_roblesok?igsh=MThzZ3Q3czBxN3FoeQ==",
       "iconName": "instagram"
     }
   ],
